--- a/iau_prj_env/bitarovsky_machacova.ipynb
+++ b/iau_prj_env/bitarovsky_machacova.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "source": [
     "## Fáza 1\n",
-    "Základný opis dát spolu s ich charakteristikami (5b) <br>\n",
+    "####Základný opis dát spolu s ich charakteristikami (5b) <br>\n",
     "V tejto fáze uveďte:\n",
     "* Počet záznamov, počet atribútov, ich typy,\n",
     "* Pre zvolené významné atribúty ich distribúcie, základné deskriptívne štatistiky a pod.\n",
@@ -1674,6 +1674,30 @@
     "# good korelácia\n",
     "sns.scatterplot(x=df_nums_only['C2H3NO5'], y=df_nums_only['PM10'], hue=df_nums_only['warning'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0675249-39d2-45d4-9540-2b150b6f44d7",
+   "metadata": {},
+   "source": [
+    "#### Identifikácia problémov v dátach s prvotným riešením (5b)\n",
+    "* Identifikujte problémy v dátach napr.: \n",
+    "    * nevhodná štruktúra dát, \n",
+    "    * duplicitné záznamy, \n",
+    "    * nejednotné formáty, \n",
+    "    * chýbajúce hodnoty, \n",
+    "    * vychýlené hodnoty,\n",
+    "    * v dátach sa môžu nachádzať aj iné, tu nevymenované problémy. \n",
+    "* Navrhnuté riešenie problémov s dátami prvotne realizujte na dátach. Problémy s dátami môžete riešiť iteratívne v každej fáze aj vo všetkých fázach podľa Vašej potreby."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ad52d79-f68d-4b7b-8598-90ee520f3cfd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
