--- a/iau_prj_env/bitarovsky_machacova.ipynb
+++ b/iau_prj_env/bitarovsky_machacova.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa08f07",
+   "id": "72768162",
    "metadata": {},
    "source": [
     "## Table of contents\n",
@@ -129,9 +129,7 @@
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import scipy.stats as stats\n",
-    "from matplotlib_venn import venn2\n",
-    "from matplotlib_venn import venn3"
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aec0fea5",
+   "id": "2fa942be",
    "metadata": {},
    "source": [
     "#### 1.1.1 Počet záznamov, počet atribútov, ich typy <a name=\"111\"></a>"
@@ -529,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf607950",
+   "id": "c4b151b8",
    "metadata": {},
    "source": [
     "#### 1.1.2 Distribúcie, základné deskriptívne štatistiky a pod. <a name=\"112\"></a>"
@@ -580,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a38fe3c",
+   "id": "8980fa49",
    "metadata": {},
    "source": [
     "#### 1.1.3 Párová analýza dát <a name=\"113\"></a>"
@@ -589,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39599e4",
+   "id": "e4a84777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ee1f92",
+   "id": "6270ce67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "355f5016",
+   "id": "288ff78b",
    "metadata": {},
    "source": [
     "Významnejšie korelácie sa javia byť medzi týmito atribútmi:\n",
@@ -690,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7996fe17",
+   "id": "2b954d2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ed988cf",
+   "id": "96723f2c",
    "metadata": {},
    "source": [
     "### 1.3 Formulácia a štatistické overenie hypotéz o dátach (5b) <br> <a name=\"hypotezy\"></a>\n",
@@ -714,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acbb87d1",
+   "id": "694b839f",
    "metadata": {},
    "outputs": [],
    "source": []
