--- a/iau_prj_env/bitarovsky_machacova.ipynb
+++ b/iau_prj_env/bitarovsky_machacova.ipynb
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9213b5c7",
+   "id": "8e530647",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2422,16 +2422,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6a9c284",
+   "id": "daf13e07",
    "metadata": {},
    "source": [
-    "Hypotéza 1: Merania kvality ovzdušia majú v kritickom stave v priemere vyššiu hodnotu látky C2H3NO5"
+    "> #### Hypotéza 1: Merania kvality ovzdušia majú v kritickom stave v priemere vyššiu hodnotu látky C2H3NO5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8b6ebe58",
+   "id": "90e4df63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2442,7 +2442,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a5523caf",
+   "id": "82063ef7",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d9887ef5",
+   "id": "38046192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2471,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6dad4af7",
+   "id": "c8a20c2d",
    "metadata": {},
    "outputs": [
     {
@@ -2489,7 +2489,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5e4630d5",
+   "id": "b2390618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,16 +2499,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a9ecca",
+   "id": "3c619ece",
    "metadata": {},
    "source": [
-    "Test normality"
+    "##### Test normality"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "12b93a1a",
+   "id": "6107f6c9",
    "metadata": {},
    "outputs": [
     {
@@ -2528,7 +2528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42cdbe6",
+   "id": "f55a242b",
    "metadata": {},
    "source": [
     "Mann Whitney U test"
@@ -2537,7 +2537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "323e98bd",
+   "id": "0a775489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2546,16 +2546,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56ab2af",
+   "id": "3d209994",
    "metadata": {},
    "source": [
-    "Kruskalov test"
+    "##### Kruskalov test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "18e6f906",
+   "id": "d72be8a8",
    "metadata": {},
    "outputs": [
     {
@@ -2575,16 +2575,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a5fa96",
+   "id": "8b218446",
    "metadata": {},
    "source": [
-    "Analysis of variance test"
+    "##### Analysis of variance test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4b91b600",
+   "id": "6711d692",
    "metadata": {},
    "outputs": [
     {
@@ -2604,16 +2604,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "341275fc",
+   "id": "86245646",
    "metadata": {},
    "source": [
-    "Plots"
+    "##### Plots"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1bebd30c",
+   "id": "d2a0fb2e",
    "metadata": {},
    "outputs": [
     {
@@ -2644,7 +2644,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4ba6d571",
+   "id": "da6d1f4e",
    "metadata": {},
    "outputs": [
     {
@@ -2675,7 +2675,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "aabad8ae",
+   "id": "20cab9cc",
    "metadata": {},
    "outputs": [
     {
@@ -2701,6 +2701,16 @@
    ],
    "source": [
     "df.boxplot(by ='warning', column =['C2H3NO5'], grid = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bef25425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Na základe testu vyvraciame alternatívnu hypotézu v prospech nulovej hypotézy, a teda "
    ]
   }
  ],
