--- a/iau_prj_env/bitarovsky_machacova.ipynb
+++ b/iau_prj_env/bitarovsky_machacova.ipynb
@@ -63,38 +63,38 @@
     "    PM2.5 - Particulate Matter (µg/m3) \n",
     "    PM10 - Particulate Matter (µg/m3) \n",
     "    NOx - Nitrogen Oxides (µg/m3)\n",
-    "    + NO2 - Nitrogen Dioxide (µg/m3)\n",
-    "    * SO2 - Sulfur Dioxide  (µg/m3)\n",
-    "    * CO - Carbon Monoxide emissions  (µg/m3)\n",
-    "    * CO2 - Carbon Dioxide  (µg/m3)\n",
-    "    * PAHs - Polycyclic Aromatic Hydrocarbons  (µg/m3)\n",
-    "    * NH3 - Ammonia trace  (µg/m3)\n",
-    "    * Pb - Lead  (µg/m3)\n",
-    "    * TEMP - Temperature (degree Celsius)\n",
-    "    * DEWP - Dew point temperature (degree Celsius)\n",
-    "    * PRES - Pressure (hPa, <100, 1050>)\n",
-    "    * RAIN - Rain (mm)\n",
-    "    * WSPM - Wind Speed (m/s)\n",
-    "    * WD - Wind Direction\n",
-    "    * VOC - Volatile Organic Compounds\n",
-    "    * CFCs - Chlorofluorocarbons\n",
-    "    * C2H3NO5 - Peroxyacetyl nitrate\n",
-    "    * H2CO - Plywood emit formaldehyde\n",
-    "    * GSTM1 - Glutathione-S transferase M1\n",
-    "    * 1-OHP - 1-hydroxypyrene\n",
-    "    * 2-OHF - 2-hydroxyfluorene\n",
-    "    * 2-OHNa - 2-hydroxynaphthalene\n",
-    "    * N2 - Nitrogen\n",
-    "    * O2 - Oxygen\n",
-    "    * O3 - Ozone\n",
-    "    * Ar - Argon\n",
-    "    * Ne - Neon\n",
-    "    * CH4 - Methane\n",
-    "    * He - Helium\n",
-    "    * Kr - Krypton\n",
-    "    * I2 - Iodine\n",
-    "    * H2 - Hydrogen\n",
-    "    * Xe - Xenon\n",
+    "    NO2 - Nitrogen Dioxide (µg/m3)\n",
+    "    SO2 - Sulfur Dioxide  (µg/m3)\n",
+    "    CO - Carbon Monoxide emissions  (µg/m3)\n",
+    "    CO2 - Carbon Dioxide  (µg/m3)\n",
+    "    PAHs - Polycyclic Aromatic Hydrocarbons  (µg/m3)\n",
+    "    NH3 - Ammonia trace  (µg/m3)\n",
+    "    Pb - Lead  (µg/m3)\n",
+    "    TEMP - Temperature (degree Celsius)\n",
+    "    DEWP - Dew point temperature (degree Celsius)\n",
+    "    PRES - Pressure (hPa, <100, 1050>)\n",
+    "    RAIN - Rain (mm)\n",
+    "    WSPM - Wind Speed (m/s)\n",
+    "    WD - Wind Direction\n",
+    "    VOC - Volatile Organic Compounds\n",
+    "    CFCs - Chlorofluorocarbons\n",
+    "    C2H3NO5 - Peroxyacetyl nitrate\n",
+    "    H2CO - Plywood emit formaldehyde\n",
+    "    GSTM1 - Glutathione-S transferase M1\n",
+    "    1-OHP - 1-hydroxypyrene\n",
+    "    2-OHF - 2-hydroxyfluorene\n",
+    "    2-OHNa - 2-hydroxynaphthalene\n",
+    "    N2 - Nitrogen\n",
+    "    O2 - Oxygen\n",
+    "    O3 - Ozone\n",
+    "    Ar - Argon\n",
+    "    Ne - Neon\n",
+    "    CH4 - Methane\n",
+    "    He - Helium\n",
+    "    Kr - Krypton\n",
+    "    I2 - Iodine\n",
+    "    H2 - Hydrogen\n",
+    "    Xe - Xenon\n",
     "</details>"
    ]
   },
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2e043d5",
+   "id": "4bb53783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "639ece6b",
+   "id": "fa05ebbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a41dc2b8",
+   "id": "cc7a028c",
    "metadata": {},
    "source": [
     "> #### Hypotéza 1: Merania kvality ovzdušia majú v kritickom stave v priemere vyššiu hodnotu látky C2H3NO5\n",
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0830ccf",
+   "id": "37825bd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dec566d",
+   "id": "dd07bb97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717dbaf8",
+   "id": "9ab79904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19435afc",
+   "id": "7f166dba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "907ccdf1",
+   "id": "af073dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca224110",
+   "id": "5220fbeb",
    "metadata": {},
    "source": [
     "##### Test normality"
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6e2901",
+   "id": "9cf6f96b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bba0895",
+   "id": "5460fec7",
    "metadata": {},
    "source": [
     "Mann Whitney U test"
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c80f54f8",
+   "id": "744ab13c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f219e48c",
+   "id": "3abf7cf3",
    "metadata": {},
    "source": [
     "##### Kruskalov test"
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3581aca",
+   "id": "8f645322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84fb26b",
+   "id": "2d1536c8",
    "metadata": {},
    "source": [
     "##### Analysis of variance test"
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb09c7f3",
+   "id": "f71c7a43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61fe976c",
+   "id": "6764d4e7",
    "metadata": {},
    "source": [
     "##### Plots"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0569b5a5",
+   "id": "d9ccd872",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0752ceb0",
+   "id": "4c4a84a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e40a54",
+   "id": "3ea5b3fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d87de332",
+   "id": "a71fea78",
    "metadata": {},
    "source": [
     "> Na základe testu vyvraciame alternatívnu hypotézu v prospech nulovej hypotézy, a teda nulovú hypotézu akceptujeme. # asi"
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c5d40f",
+   "id": "c21fe33c",
    "metadata": {},
    "outputs": [],
    "source": []
