--- a/iau_prj_env/bitarovsky_machacova.ipynb
+++ b/iau_prj_env/bitarovsky_machacova.ipynb
@@ -2565,12 +2565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "83c46eb9",
+   "execution_count": 59,
+   "id": "b9cf3bec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gas_warning_list = "
+    "gas_warning_list = gas_warning_list[0:2000]\n",
+    "gas_no_warning_list = gas_no_warning_list[0:2000]"
    ]
   },
   {
@@ -2583,12 +2584,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "744ab13c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mannwhitneyu(gas_warning_list, gas_no_warning_list, method=\"exact\")   # toto treba nejak zredukovat data lebo to nezbehne"
+    "mannwhitneyu(gas_warning_list, gas_no_warning_list, method=\"exact\")   # toto treba nejak zredukovat data lebo to nezbehne"
    ]
   },
   {
