nahradzovanie nan hodnot done

--- a/iau_prj_env/bitarovsky_machacova_IAU_prj2.ipynb
+++ b/iau_prj_env/bitarovsky_machacova_IAU_prj2.ipynb
@@ -161,24 +161,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f769a6c-0bbb-4ca3-9099-000ed4d27d3b",
+   "cell_type": "markdown",
+   "id": "152fcea4-5c44-4e01-9a8b-7774d5958daa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_notNa = df.dropna()\n",
-    "df_notNa.info()"
+    "## Replacing NaNs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d6f6e7-624f-4c16-898f-03eb91609140",
+   "id": "c4357159-63ef-47f4-b571-5991077a210c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_notNa.corr() - df.corr()"
+    "def replaceNaN(df_original, strategy):\n",
+    "    df = df_original.copy()\n",
+    "\n",
+    "    na_cols = df.columns[df.isnull().any()].tolist()\n",
+    "    \n",
+    "    if strategy == 'kNN':\n",
+    "        imp_strategy = KNNImputer(n_neighbors=5, weights='uniform', metric='nan_euclidean')\n",
+    "\n",
+    "    elif strategy == 'mean' or strategy == 'median':    \n",
+    "        imp_strategy = SimpleImputer(missing_values=np.nan, strategy=strategy)\n",
+    "        \n",
+    "    elif strategy == 'drop_na':\n",
+    "        df = df.dropna()\n",
+    "        \n",
+    "    if strategy != 'drop_na':\n",
+    "        for col in na_cols:\n",
+    "            df[col] = imp_strategy.fit_transform(df[[col]])\n",
+    "        \n",
+    "    print(df.isnull().sum())\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(16,12))\n",
+    "    sns.heatmap(df.corr() - df_original.corr(), ax=ax, annot=True, cmap='coolwarm')\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5502a39-60b0-4053-a2d1-60703e375a85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prekodovanie textu locacie n číslo \n",
+    "ce_ordinal = ce.OrdinalEncoder(cols=['location'])\n",
+    "df_ml = ce_ordinal.fit_transform(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1566e7c3-f3d7-4613-b9da-e87c6579ada2",
+   "metadata": {},
+   "source": [
+    "### Drop nans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5961099-2c10-4a3d-b430-890607ceb93f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ml_dropedNa = replaceNaN(df_ml, 'drop_na')"
    ]
   },
   {
@@ -192,47 +242,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5502a39-60b0-4053-a2d1-60703e375a85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ce_ordinal = ce.OrdinalEncoder(cols=['location'])\n",
-    "df_ml = ce_ordinal.fit_transform(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c6a29726-4db4-4861-ab27-8de3fb79e15e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_na_mean = df_ml.copy()\n",
-    "\n",
-    "imp_mean = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
-    "\n",
-    "imp_mean.fit(df_na_mean)\n",
-    "\n",
-    "imp_mean.transform(df_na_mean)"
+    "df_ml_na_mean = replaceNaN(df_ml, 'mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0336abf9-8cbe-45f0-8569-786cfff15fa1",
+   "metadata": {},
+   "source": [
+    "### Median"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b825d8ac-2750-40d6-9557-c000ed15e3eb",
+   "id": "cffa7943-0523-44c4-9257-be9d8f84dbd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_na_mean.isnull().sum()"
+    "df_ml_na_median = replaceNaN(df_ml, 'median')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69693b01-3825-434c-bc6e-54b51128f669",
+   "metadata": {},
+   "source": [
+    "### kNN"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b468e1-a76d-4e3a-9b79-220ece539ac5",
+   "id": "c8b2da80-506a-4f53-8cbf-92d47dbd918e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_ml_na_knn = replaceNaN(df_ml, 'kNN')"
+   ]
   }
  ],
  "metadata": {
