--- a/iau_prj_env/bitarovsky_machacova_IAU_prj2.ipynb
+++ b/iau_prj_env/bitarovsky_machacova_IAU_prj2.ipynb
@@ -398,6 +398,147 @@
    "source": [
     "identify_outliers(df_ml_na_knn_notOutliers)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f390fb63-e866-439e-8afd-8c454f8016fb",
+   "metadata": {},
+   "source": [
+    "## 2.2 Realizácia predspracovania dát (5b).\n",
+    "* Transformované dáta pre strojové učenie si rozdeľuje na trénovaciu a testovaciu množinu podľa vami preddefinovaným pomerom. Naďalej pracujte len s trénovacím datasetom.\n",
+    "* Transformujte atribútov dát pre strojové učenie podľa dostupných techník (minimálne 2 techniky) ako scaling, transformers a ďalšie.\n",
+    "* Zdôvodnite Vašu voľby/rozhodnutie pre realizáciu (t.j. zdokumentovanie)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db00fde1-744b-452e-b334-40e656127501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_ml_na_knn_notOutliers.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "964c5cac-31b5-4ad1-9975-5af25080a91c",
+   "metadata": {},
+   "source": [
+    "### Transforovanie a škálovanie dát"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beec1824-5a9b-4bb5-92c7-751eb0be343c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "power = PowerTransformer(method='yeo-johnson', standardize=True)\n",
+    "quan = QuantileTransformer(n_quantiles=20, random_state=0)\n",
+    "stan_s = StandardScaler()\n",
+    "norm_s = MinMaxScaler()\n",
+    "\n",
+    "m_col = [\n",
+    "    'TEMP', 'TEMP', \n",
+    "    'PRES', 'PRES',\n",
+    "    'PM2.5', 'PM2.5', \n",
+    "    'NOx', 'NOx', \n",
+    "    'PM10','PM10', \n",
+    "    'C2H3NO5', 'C2H3NO5', \n",
+    "    'CH4', 'CH4',\n",
+    "    'Pb', 'Pb',          \n",
+    "    'NH3', 'NH3', \n",
+    "    'SO2', 'SO2',\n",
+    "    'O3', 'O3',\n",
+    "    'CO', 'CO',\n",
+    "    'PAHs', 'PAHs', \n",
+    "    'H2CO', 'H2CO',\n",
+    "    'CFCs', 'CFCs'\n",
+    "]\n",
+    "\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(10,120))\n",
+    "\n",
+    "for num, col_name in enumerate(m_col):\n",
+    "    \n",
+    "    plt.subplot(16, 2, num+1)\n",
+    "    plt.hist(df[col_name], bins=25)\n",
+    "    \n",
+    "    if num % 2 == 0:\n",
+    "        plt.title(col_name + ' - Transformacia')\n",
+    "        pow_trans = power.fit_transform(df[[col_name]])\n",
+    "        plt.hist(pow_trans, bins=25)\n",
+    "        q_trans = quan.fit_transform(df[[col_name]])\n",
+    "\n",
+    "        plt.hist(q_trans, bins=25)\n",
+    "        plt.grid()\n",
+    "        plt.legend(['origin', 'power_t', 'quan_t'])\n",
+    "\n",
+    "    \n",
+    "    else:\n",
+    "        plt.title(col_name + ' - Skalovanie')\n",
+    "        s_scaled = stan_s.fit_transform(df[[col_name]])\n",
+    "        plt.hist(s_scaled, bins=25)\n",
+    "        n_scaled = norm_s.fit_transform(df[[col_name]])\n",
+    "\n",
+    "        plt.hist(n_scaled, bins=25)\n",
+    "        plt.grid()\n",
+    "        plt.legend(['origin', 'stan_s', 'norm_s'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e8cbe61-bf5a-4c49-8480-3331c0d6c58d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @TODO napísať vyhodnotenie pre tieto obrázky"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a890e9cd-b9ad-433a-ac7c-bd598e946a8d",
+   "metadata": {},
+   "source": [
+    "### Rozdelenie dát "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73588ad1-c962-4575-ba74-e17d15815340",
+   "metadata": {},
+   "source": [
+    "Dataset rozdelíme v pomere 1/3 pre testovaciu množinu a 2/3 pre trénovaciu množinu \n",
+    "pre indikátor (y) a pre všetky ostatné atribúty (X)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2713c771-c59f-4949-ae72-aac5fde4434a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(df.drop(['warning'], axis=1), df['warning'], test_size=0.33)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcb83ffe-ec51-48cd-b51f-3b6e6b3ff47a",
+   "metadata": {},
+   "source": [
+    "yeo-johnson sme vybrali preto lebo Box-cox nepodporuje transformáciu záporných hodnôt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "442fa95c-35e6-4dbe-9c80-57452ed365e6",
+   "metadata": {},
+   "source": [
+    "### Zhodnotenie"
+   ]
   }
  ],
  "metadata": {
