--- a/iau_prj_env/bitarovsky_machacova_IAU_prj2.ipynb
+++ b/iau_prj_env/bitarovsky_machacova_IAU_prj2.ipynb
@@ -18,29 +18,104 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "401c29c6-7f8c-4695-9b9e-1260fe82777d",
-   "metadata": {},
-   "source": [
-    "# Fáza 2 Predspracovanie údajov <a name=\"faza2\"></a>\n",
-    "## 2.1 Integrácia a čistenie dát (5b) <a name=\"\"></a>\n",
-    "Transformujte dáta na vhodný formát pre strojové učenie t.j. jedno pozorovanie musí byť opísané jedným riadkom a každý atribút musí byť v numerickom formáte. \n",
-    "* Pri riešení chýbajúcich hodnôt (missing values) vyskúšajte rôzne stratégie ako napr.\n",
-    "    * odstránenie pozorovaní s chýbajúcimi údajmi\n",
-    "    * nahradenie chýbajúcej hodnoty mediánom, priemerom, pomerom (ku korelovanému atribútu), alebo pomocou lineárnej regresie resp. kNN\n",
-    "* Podobne postupujte aj pri riešení vychýlených hodnôt (outlier detection):\n",
-    "    * odstránenie vychýlených (odľahlých) pozorovaní\n",
-    "    * nahradenie vychýlenej hodnoty hraničnými hodnotami rozdelenia (5% resp. 95%)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "08a449a6-83ed-4172-a866-1de19b8fa8f0",
+   "execution_count": null,
+   "id": "500c8350",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pause"
+    "pause"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "391929a1",
+   "metadata": {},
+   "source": [
+    "## Table of contents <a name=\"obsah\"></a>\n",
+    "* [Zadanie](#zadanie)\n",
+    "    * [Slovníček](#slovnicek)\n",
+    "   \n",
+    "* [Data init (Fáza 1)](#dataInit)\n",
+    "* [Fáza 2](#faza2)\n",
+    "    * [2.1. Integrácia a čistenie dát](#2.1.)\n",
+    "        * [2.1.1. Replacing NaNs](#2.1.1.)\n",
+    "            * [2.1.1.1. Replacing NaNs - Method 1: Drop nans](#2.1.1.a)\n",
+    "            * [2.1.1.2. Replacing NaNs - Method 2: Replace with Mean](#2.1.1.b)\n",
+    "            * [2.1.1.3. Replacing NaNs - Method 3: Replace with Median](#2.1.1.c)\n",
+    "            * [2.1.1.4. Replacing NaNs - Method 4: Replace with kNN](#2.1.1.d)\n",
+    "        * [2.1.2. Deleting Outliers Values](#2.1.2.)\n",
+    "    * [2.2. Realizácia predspracovania dát](#2.2.)  \n",
+    "        * [2.2.1. Transforovanie a škálovanie dát](#2.2.1.)\n",
+    "        * [2.2.2. Rozdelenie dát](#2.2.2.)\n",
+    "        * [2.2.3. Zhodnotenie ](#2.2.3.)\n",
+    "    * [2.3. Výber atribútov pre strojové učenie](#2.3.)  \n",
+    "        * [2.3.1. Variance Threshold ](#2.3.1.)\n",
+    "        * [2.3.2. SelectKBest](#2.3.2.)\n",
+    "        * [2.3.3 SelectPercentile](#2.3.3.)\n",
+    "        * [2.3.4. Záver výberov](#2.3.4.)\n",
+    "    * [2.4. Replikovateľnosť predspracovania](#2.4.)  \n",
+    "        * [2.4.1. Code improvements](#2.4.1.)\n",
+    "        * [2.4.2. Pipeline](#2.4.2.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ceb7b2a",
+   "metadata": {},
+   "source": [
+    "# Zadanie <a name=\"zadanie\"></a>\n",
+    "Znečistenie ovzdušia spôsobuje vážne dýchacie a srdcové ochorenia, ktoré môžu byť smrteľné. Najčastejšie sú postihnuté deti, čo vedie k zápalu pľúc a problémom s dýchaním vrátane astmy. Kyslé dažde, ničenie ozónovej vrstvy a globálne otepľovanie sú niektoré z nepriaznivých dôsledkov. Dátová sada pre Vás (World's Air Pollution: Real-time Air Quality Index https://waqi.info/) predstavuje záznamy jednotlivých meraní kvality ovzdušia ako kombinácia mnohých faktorov bez časovej následnosti. V záznamoch je závislá premenná s menom “warning” indikujúca alarmujúci stav kvality ovzdušia. Vo veľkých mestách ako napr. Peking (angl. Beijing, hlavné mesto Číny s viac ako 21 miliónov ľudí) sa pri varovaní spustí opatrenie ako obmedzenie pohybov áut a ľudí v meste alebo umelý dážď až pokiaľ kvalita vzduchu sa nevráti do normu.\n",
+    "\n",
+    "* Úlohou je predikovať závislé hodnoty premennej “warning” pomocou metód strojového učenia.\n",
+    "* Pritom sa treba vysporiadať s viacerými problémami, ktoré sa v dátach nachádzajú ako formáty dát, chýbajúce, vychýlené hodnoty a pod."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca932d7e",
+   "metadata": {},
+   "source": [
+    "## Slovníček  <a name=\"slovnicek\"></a>\n",
+    "<details>\n",
+    "    <summary>Zobraziť</summary>\n",
+    "    \n",
+    "    PM2.5 - Particulate Matter (µg/m3) \n",
+    "    PM10 - Particulate Matter (µg/m3) \n",
+    "    NOx - Nitrogen Oxides (µg/m3)\n",
+    "    NO2 - Nitrogen Dioxide (µg/m3)\n",
+    "    SO2 - Sulfur Dioxide  (µg/m3)\n",
+    "    CO - Carbon Monoxide emissions  (µg/m3)\n",
+    "    CO2 - Carbon Dioxide  (µg/m3)\n",
+    "    PAHs - Polycyclic Aromatic Hydrocarbons  (µg/m3)\n",
+    "    NH3 - Ammonia trace  (µg/m3)\n",
+    "    Pb - Lead  (µg/m3)\n",
+    "    TEMP - Temperature (degree Celsius)\n",
+    "    DEWP - Dew point temperature (degree Celsius)\n",
+    "    PRES - Pressure (hPa, <100, 1050>)\n",
+    "    RAIN - Rain (mm)\n",
+    "    WSPM - Wind Speed (m/s)\n",
+    "    WD - Wind Direction\n",
+    "    VOC - Volatile Organic Compounds\n",
+    "    CFCs - Chlorofluorocarbons\n",
+    "    C2H3NO5 - Peroxyacetyl nitrate\n",
+    "    H2CO - Plywood emit formaldehyde\n",
+    "    GSTM1 - Glutathione-S transferase M1\n",
+    "    1-OHP - 1-hydroxypyrene\n",
+    "    2-OHF - 2-hydroxyfluorene\n",
+    "    2-OHNa - 2-hydroxynaphthalene\n",
+    "    N2 - Nitrogen\n",
+    "    O2 - Oxygen\n",
+    "    O3 - Ozone\n",
+    "    Ar - Argon\n",
+    "    Ne - Neon\n",
+    "    CH4 - Methane\n",
+    "    He - Helium\n",
+    "    Kr - Krypton\n",
+    "    I2 - Iodine\n",
+    "    H2 - Hydrogen\n",
+    "    Xe - Xenon\n",
+    "</details>"
    ]
   },
   {
@@ -48,7 +123,7 @@
    "id": "8344e4ef-bf7a-4a03-9614-b6f3f23fa673",
    "metadata": {},
    "source": [
-    "# Data init"
+    "# Data init <a name=\"dataInit\"></a>"
    ]
   },
   {
@@ -343,6 +418,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "401c29c6-7f8c-4695-9b9e-1260fe82777d",
+   "metadata": {},
+   "source": [
+    "# Fáza 2 Predspracovanie údajov <a name=\"faza2\"></a> \n",
+    " \n",
+    "# 2.1 Integrácia a čistenie dát (5b) <a name=\"2.1.\"></a>\n",
+    "Transformujte dáta na vhodný formát pre strojové učenie t.j. jedno pozorovanie musí byť opísané jedným riadkom a každý atribút musí byť v numerickom formáte. \n",
+    "* Pri riešení chýbajúcich hodnôt (missing values) vyskúšajte rôzne stratégie ako napr.\n",
+    "    * odstránenie pozorovaní s chýbajúcimi údajmi\n",
+    "    * nahradenie chýbajúcej hodnoty mediánom, priemerom, pomerom (ku korelovanému atribútu), alebo pomocou lineárnej regresie resp. kNN\n",
+    "* Podobne postupujte aj pri riešení vychýlených hodnôt (outlier detection):\n",
+    "    * odstránenie vychýlených (odľahlých) pozorovaní\n",
+    "    * nahradenie vychýlenej hodnoty hraničnými hodnotami rozdelenia (5% resp. 95%)\n",
+    "  \n",
+    "<b>Go to:</b>  \n",
+    "* [Naspäť na Obsah](#obsah)\n",
+    "* [Replacing NaNs - Method 1: Drop nans](#2.1.1.a)\n",
+    "* [Replacing NaNs - Method 2: Replace with Mean](#2.1.1.b)\n",
+    "* [Replacing NaNs - Method 3: Replace with Median](#2.1.1.c)\n",
+    "* [Replacing NaNs - Method 4: Replace with kNN](#2.1.1.d)\n",
+    "* [Deleting Outliers Values](#2.1.2.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "23e5956d-81c3-47f1-b1bf-5766dab9aee8",
@@ -357,7 +457,7 @@
    "id": "152fcea4-5c44-4e01-9a8b-7774d5958daa",
    "metadata": {},
    "source": [
-    "## Replacing NaNs"
+    "## 2.1.1. Replacing NaNs <a name=\"2.1.1.\"></a>"
    ]
   },
   {
@@ -726,7 +826,7 @@
    "id": "1566e7c3-f3d7-4613-b9da-e87c6579ada2",
    "metadata": {},
    "source": [
-    "### Drop nans"
+    "### Replacing NaNs - Method 1: Drop nans <a name=\"2.1.1.a\"></a>"
    ]
   },
   {
@@ -779,7 +879,7 @@
    "id": "090288e5-2157-4747-a7d6-5b629737da8c",
    "metadata": {},
    "source": [
-    "### Mean"
+    "### Replacing NaNs - Method 2: Replace with Mean <a name=\"2.1.1.b\"></a>"
    ]
   },
   {
@@ -832,7 +932,7 @@
    "id": "0336abf9-8cbe-45f0-8569-786cfff15fa1",
    "metadata": {},
    "source": [
-    "### Median"
+    "### Replacing NaNs - Method 3: Replace with Median <a name=\"2.1.1.c\"></a>"
    ]
   },
   {
@@ -885,7 +985,7 @@
    "id": "69693b01-3825-434c-bc6e-54b51128f669",
    "metadata": {},
    "source": [
-    "### kNN"
+    "### Replacing NaNs - Method 4: Replace with kNN <a name=\"2.1.1.d\"></a>"
    ]
   },
   {
@@ -938,7 +1038,7 @@
    "id": "c8e07cdd-62d9-42a4-8eb5-05c3ea8b21b4",
    "metadata": {},
    "source": [
-    "## Deleting outliers vlaues"
+    "## 2.1.2. Deleting Outliers Values <a name=\"2.1.2.\"></a>"
    ]
   },
   {
@@ -1197,14 +1297,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4cb3bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ml_na_knn.plot(kind='box', subplots=True, layout=(1, 17), sharex=False, sharey=False, figsize=(20, 5))\n",
+    "plt.title('Pred odstránením outlierov')\n",
+    "df_ml_na_knn_notOutliers.plot(kind='box', subplots=True, layout=(1, 17), sharex=False, sharey=False, figsize=(20, 5))\n",
+    "plt.title('Po odstránení outlierov')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f390fb63-e866-439e-8afd-8c454f8016fb",
    "metadata": {},
    "source": [
-    "## 2.2 Realizácia predspracovania dát (5b).\n",
+    "# 2.2. Realizácia predspracovania dát (5b). <a name=\"2.2.\"></a>\n",
     "* Transformované dáta pre strojové učenie si rozdeľuje na trénovaciu a testovaciu množinu podľa vami preddefinovaným pomerom. Naďalej pracujte len s trénovacím datasetom.\n",
     "* Transformujte atribútov dát pre strojové učenie podľa dostupných techník (minimálne 2 techniky) ako scaling, transformers a ďalšie.\n",
-    "* Zdôvodnite Vašu voľby/rozhodnutie pre realizáciu (t.j. zdokumentovanie)\n"
+    "* Zdôvodnite Vašu voľby/rozhodnutie pre realizáciu (t.j. zdokumentovanie)\n",
+    "\n",
+    "<b>Go to:</b>  \n",
+    "* [Naspäť na Obsah](#obsah)\n",
+    "* [Transforovanie a škálovanie dát](#2.2.1.)\n",
+    "* [Rozdelenie dát](#2.2.2.)\n",
+    "* [Zhodnotenie ](#2.2.3.)"
    ]
   },
   {
@@ -1222,7 +1341,7 @@
    "id": "964c5cac-31b5-4ad1-9975-5af25080a91c",
    "metadata": {},
    "source": [
-    "### Transforovanie a škálovanie dát"
+    "## 2.2.1. Transforovanie a škálovanie dát <a name=\"2.2.1.\"></a>"
    ]
   },
   {
@@ -1310,6 +1429,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dcb83ffe-ec51-48cd-b51f-3b6e6b3ff47a",
+   "metadata": {},
+   "source": [
+    "yeo-johnson sme vybrali preto lebo Box-cox nepodporuje transformáciu záporných hodnôt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "5e8cbe61-bf5a-4c49-8480-3331c0d6c58d",
@@ -1324,7 +1451,7 @@
    "id": "a890e9cd-b9ad-433a-ac7c-bd598e946a8d",
    "metadata": {},
    "source": [
-    "### Rozdelenie dát "
+    "## 2.2.2. Rozdelenie dát <a name=\"2.2.2.\"></a>"
    ]
   },
   {
@@ -1348,18 +1475,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb83ffe-ec51-48cd-b51f-3b6e6b3ff47a",
-   "metadata": {},
-   "source": [
-    "yeo-johnson sme vybrali preto lebo Box-cox nepodporuje transformáciu záporných hodnôt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "442fa95c-35e6-4dbe-9c80-57452ed365e6",
    "metadata": {},
    "source": [
-    "### Zhodnotenie"
+    "## 2.2.3. Zhodnotenie <a name=\"2.2.3.\"></a>"
    ]
   },
   {
@@ -1375,9 +1494,16 @@
    "id": "465c0cd4-a4ac-40d5-b455-9f04bb91b71a",
    "metadata": {},
    "source": [
-    "## Výber atribútov pre strojové učenie (5b)\n",
+    "# 2.3. Výber atribútov pre strojové učenie (5b) <a name=\"2.3.\"></a>\n",
     "* Zistite ktoré atribúty (features) vo vašich dátach pre strojové učenie sú informatívne k atribútu “warning”. Zoradíte tie atribúty v poradí podľa dôležitosti. \n",
-    "* Zdôvodnite Vašu voľby/rozhodnutie pre realizáciu (t.j. zdokumentovanie)"
+    "* Zdôvodnite Vašu voľby/rozhodnutie pre realizáciu (t.j. zdokumentovanie)\n",
+    "\n",
+    "<b>Go to:</b>  \n",
+    "* [Naspäť na Obsah](#obsah)\n",
+    "* [Variance Threshold ](#2.3.1.)\n",
+    "* [SelectKBest](#2.3.2.)\n",
+    "* [SelectPercentile](#2.3.3.)\n",
+    "* [Záver výberov](#2.3.4.)"
    ]
   },
   {
@@ -1385,7 +1511,7 @@
    "id": "e2ea6479-28b7-4336-b89f-8a32d3b6b00f",
    "metadata": {},
    "source": [
-    "### Variance Threshold"
+    "## 2.3.1. Variance Threshold <a name=\"2.3.1.\"></a>"
    ]
   },
   {
@@ -1490,7 +1616,7 @@
    "id": "72b3ed65-b383-4043-b3d2-31a3ae5d83e0",
    "metadata": {},
    "source": [
-    "### SelectKBest"
+    "## 2.3.2. SelectKBest <a name=\"2.3.2.\"></a>"
    ]
   },
   {
@@ -1530,7 +1656,7 @@
    "id": "84ab0458-0296-4de4-b968-1ff4b7f21edb",
    "metadata": {},
    "source": [
-    "### SelectPercentile"
+    "## 2.3.3 SelectPercentile <a name=\"2.3.3.\"></a>"
    ]
   },
   {
@@ -1570,7 +1696,7 @@
    "id": "7e9cb3cd-9182-4b76-85f8-2fffa593c9f3",
    "metadata": {},
    "source": [
-    "### Záver výberov"
+    "### 2.3.4. Záver výberov <a name=\"2.3.4.\"></a>"
    ]
   },
   {
@@ -1656,9 +1782,14 @@
    "id": "4eac7794-4b3c-4d61-b83e-dbf29c40afe3",
    "metadata": {},
    "source": [
-    "## Replikovateľnosť predspracovania (5b)\n",
+    "# 2.4. Replikovateľnosť predspracovania (5b) <a name=\"2.4.\"></a>\n",
     "* Upravte váš kód realizujúci predspracovanie trénovacej množiny tak, aby ho bolo možné bez ďalších úprav znovupoužiť na predspracovanie testovacej množiny (pomocou funkcie/í)\n",
-    "* Očakáva sa aj využitie možnosti sklearn.pipeline"
+    "* Očakáva sa aj využitie možnosti sklearn.pipeline\n",
+    "\n",
+    "<b>Go to:</b>  \n",
+    "* [Naspäť na Obsah](#obsah)\n",
+    "* [Code improvements](#2.4.1.)\n",
+    "* [Pipeline](#2.4.2.)"
    ]
   },
   {
@@ -1666,7 +1797,7 @@
    "id": "5d764c63-36e8-4ddc-91a8-6f1979d573d1",
    "metadata": {},
    "source": [
-    "### Code improvements"
+    "## 2.4.1. Code improvements <a name=\"2.4.1.\"></a>"
    ]
   },
   {
@@ -1850,7 +1981,7 @@
    "id": "8cd88076-6439-46a4-8613-3d59f909303a",
    "metadata": {},
    "source": [
-    "### Pipeline"
+    "## 2.4.2. Pipeline <a name=\"2.4.2.\"></a>"
    ]
   },
   {
@@ -1968,7 +2099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
